<resources>
    <string name="app_name">Shortener</string>

    <string name="app_title">Links Shortener</string>
    <string name="link_edittext_hint">Enter link</string>
    <string name="shorten">Shorten</string>
    <string name="copy_text">Copy</string>
    <string name="shortened_link_placeholder">https://bit.ly</string>
    <string name="shortened_link">Shortened Link:</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="language">Language</string>
    <string name="selected_language">English</string>

    <string name="language_array_title">Language List</string>
    <string-array name="language_array">
        <item>@string/lang_en</item>
        <item>@string/lang_ar</item>
    </string-array>
    
    <string name="lang_en">English</string>
    <string name="lang_ar">Arabic</string>
</resources>