<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/navigate_back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_back_arrow"
        app:tint="@color/light_orange"
        android:contentDescription="@string/navigate_back" />

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/dark_orange"
        style="@style/TextAppearance.MdcTypographyStyles.Headline6"
        app:layout_constraintStart_toEndOf="@id/navigate_back_icon"
        app:layout_constraintTop_toTopOf="@id/navigate_back_icon"
        app:layout_constraintBottom_toBottomOf="@id/navigate_back_icon"
        android:layout_marginStart="16dp"/>

    <LinearLayout
        android:id="@+id/change_language_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/navigate_back_icon"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textStyle="bold"
            android:textColor="@color/light_orange"
            style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"/>
        <TextView
            android:id="@+id/selected_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_language"
            android:textColor="@color/light_grey"
            style="@style/TextAppearance.MdcTypographyStyles.Subtitle2"/>
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        app:dividerColor="@color/light_orange"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/change_language_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>