<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/app_title"
        android:textColor="@color/light_orange"
        android:textStyle="bold"
        style="@style/TextAppearance.MdcTypographyStyles.Headline5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <ImageView
        android:id="@+id/settings_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/app_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_settings"
        android:layout_marginEnd="16dp"
        app:tint="@color/light_orange"
        app:layout_constraintBottom_toBottomOf="@id/app_title"
        android:contentDescription="@string/settings" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/link_animation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="300dp"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintBottom_toTopOf="@id/link_edittext"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:lottie_rawRes="@raw/shortener"
        app:lottie_autoPlay="true" />

    <EditText
        android:id="@+id/link_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/link_edittext_hint"
        android:lines="1"
        android:maxLines="1"
        android:inputType="textUri"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/shorten_button"
        android:drawableEnd="@drawable/ic_link"
        android:drawableTint="@color/light_orange"
        android:textCursorDrawable="@color/light_orange"
        android:backgroundTint="@color/light_orange"
        android:drawablePadding="4dp"
        style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/shorten_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shorten"
        android:textColor="@color/white"
        android:background="@drawable/button_light_background"
        android:textAllCaps="false"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/shortened_link_description"
        style="@style/TextAppearance.MdcTypographyStyles.Button"/>

    <TextView
        android:id="@+id/shortened_link_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shortened_link"
        app:layout_constraintBottom_toTopOf="@id/shortened_link"
        app:layout_constraintStart_toStartOf="@id/shortened_link"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/shortened_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shortened_link_placeholder"
        android:textColor="@color/dark_orange"
        app:layout_constraintBottom_toTopOf="@id/buttons_linear_layout"
        app:layout_constraintStart_toStartOf="@id/buttons_linear_layout"
        android:textAlignment="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        style="@style/TextAppearance.MdcTypographyStyles.Headline6"/>

    <LinearLayout
        android:id="@+id/buttons_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/copy_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:src="@drawable/ic_copy"
            android:background="@drawable/button_light_background"
            style="@style/TextAppearance.MdcTypographyStyles.Button"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:tint="@color/white"
            android:elevation="1dp"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/share_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:src="@drawable/ic_share"
            android:background="@drawable/button_light_background"
            style="@style/TextAppearance.MdcTypographyStyles.Button"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            app:tint="@color/white"
            android:elevation="1dp"/>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_animation_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shorten_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lottie_rawRes="@raw/loading"
        app:lottie_loop="true"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>